Revert "Fix: First container handle is not centered on an RTL page  [ED-7788]"
This reverts commit b12795e084a2c985cda71f64164dd147c301ee93.

--- a/assets/dev/scss/editor/preview/preview.scss
+++ b/assets/dev/scss/editor/preview/preview.scss
@@ -449,9 +449,6 @@ html.elementor-html {
 
 	> .elementor-element-overlay > .elementor-editor-element-settings {
 		transform: translateX(-50%);
-	  	@if 'rtl' == $direction {
-		  transform: translateX(50%);
-	  	}
 		border-radius: 0 0 5px 5px;
 
 		.elementor-editor-element-setting {
